Add ^PO (print orientation) command support
Implements ^POI/^PON commands to rotate the entire label 180°.
This is commonly used by shipping carriers like UPS and FedEx
for upside-down label printing.

- Add print_orientation.go parser for ^PO commands
- Add Rotate180 function in internal/images
- Track LabelOrientation in VirtualPrinter and LabelInfo
- Apply rotation in drawer before final encoding
- Add IgnoreOrientation option to preserve existing test goldens
- Add ups_rotated.png test case to verify rotation works

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,9 @@
 # Go workspace file
 go.work
 
+# Testdata diff files
 testdata/diff/*
+
+# Visual Studio and Visual Studio Code files
+.vs/
+.vscode/
